--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <section class="bg-light">
     <div class="container">
         <footer class="py-3">
-            <p class="text-muted small pt-5">"Python" and the Python logos are trademarks or registered trademarks of the The Python Software Foundation. We are not affiliated or endorsed by the Python Software Foundation.</p>
+            <p class="text-muted small pt-5">Job Board is an online job portal platform where our job seekers can get their desired jobs according to their interest, qualifications, skills set on computer science technology only. The Job Board is also for those Employer who wants the best employee for their company and orgnigations here they can find employe according there project and company requirement.</p>
             <ul class="nav pb-3 mb-3 text-muted small">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
