--- a/index.html
+++ b/index.html
@@ -150,38 +150,24 @@
                                 </div>
                                 <div class="col-md-8 mb-2">
                                     <h5 class="fs-4">Software Engineer - Weissman Lab</h5>
-                                    <span><i class="bi bi-building-fill"></i> Whitehead Institute for Biomedical Research</span> <span><i class="bi bi-geo-alt-fill text-muted"></i> Cambridge, MA, USA</span>
+                                    <span class="small"><i class="bi bi-building-fill"></i> Whitehead Institute for Biomedical Research</span> <span class="small"><i class="bi bi-geo-alt-fill text-muted"></i> Cambridge, MA, USA</span>
                                 </div>
                                 <div class="col-md-2 mb-2">
-                                    <span>28-Oct-2022</span>
+                                    <span class="small">28-Oct-2022</span>
                                 </div>
                                 <hr>
                             </div>
 
                             <div class="row latest-job-list-item p-2">
                                 <div class="col-md-2">
-                                    <img class="ogr-logo img-fluid mb-2" src="./assets/images/clogo1.jpeg">
+                                    <img class="ogr-logo img-fluid mb-2" src="./assets/images/org-placeholer.png">
                                 </div>
                                 <div class="col-md-8 mb-2">
-                                    <h5 class="fs-4">Software Engineer - Weissman Lab</h5>
-                                    <span><i class="bi bi-building-fill"></i> Whitehead Institute for Biomedical Research</span> <span><i class="bi bi-geo-alt-fill text-muted"></i> Cambridge, MA, USA</span>
+                                    <h5 class="fs-4">Senior Software Engineer (Python, Qt, Linux)</h5>
+                                    <span class="small"><i class="bi bi-building-fill"></i> VIOLET</span> <span class="small"><i class="bi bi-geo-alt-fill text-muted"></i> Anywhere</span>
                                 </div>
                                 <div class="col-md-2 mb-2">
-                                    <span>28-Oct-2022</span>
-                                </div>
-                                <hr>
-                            </div>
-
-                            <div class="row latest-job-list-item p-2">
-                                <div class="col-md-2">
-                                    <img class="ogr-logo img-fluid mb-2" src="./assets/images/clogo1.jpeg">
-                                </div>
-                                <div class="col-md-8 mb-2">
-                                    <h5 class="fs-4">Software Engineer - Weissman Lab</h5>
-                                    <span><i class="bi bi-building-fill"></i> Whitehead Institute for Biomedical Research</span> <span><i class="bi bi-geo-alt-fill text-muted"></i> Cambridge, MA, USA</span>
-                                </div>
-                                <div class="col-md-2 mb-2">
-                                    <span>28-Oct-2022</span>
+                                    <span class="small">28-Oct-2022</span>
                                 </div>
                                 <hr>
                             </div>
