--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                               <li><a class="dropdown-item" href="#">Create Employer Account</a></li>
                             </ul>
                         </div>
+                        <div class="form-check form-switch mx-4">
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" onClick="changeMode()">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">Light/Dark</label>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -301,5 +305,6 @@
     </section>
 
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/lightanddark.js"></script>
   </body>
 </html>
