--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+    <script>
+         $(window).load(function(){        
+            $('#jobalertsbox').modal('show');
+        }); 
+    </script>
+
 </head>
-  <body>
+
+<body>
     <!-- Dekstop Header -->
     <header class="d-none d-sm-block ">
         <div class="top-bar bg-light py-2">
@@ -303,6 +312,37 @@
         </footer>
         </div>
     </section>
+
+    <!-- Popup Model -->
+    <div class="modal" id="jobalertsbox" tabindex="-1">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Sign up for Job Alerts</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="card mt-0 rounded-0 border-0">
+                    <!-- Sign up for Job Alearts Section -->
+                    <div class="card-body">
+                      <form>
+                        <div class="mb-3">
+                          <input type="email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Address">
+                        </div>
+                        <div class="mb-3">
+                          <input type="text" class="form-control rounded-0" id="exampleInputPassword1" placeholder="Keywords">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Location">
+                        </div>
+                        <button type="submit" class="btn btn-success rounded-0 w-100">Creat Alert</button>
+                      </form>
+                    </div>
+                  </div>
+            </div>
+          </div>
+        </div>
+    </div>
 
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/lightanddark.js"></script>
