--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
     <script>
          $(window).load(function(){        
             $('#jobalertsbox').modal('show');
-        }); 
+
+            let x = document.getElementById('out');
+            let y = document.getElementById('weather');
+
+            if(navigator.geolocation){
+                    navigator.geolocation.getCurrentPosition(showPosition)
+                }else{
+                    x.innerText = "Geo Not Supported"
+                }
+                function showPosition(data){
+                console.log(data);
+                let lat = data.coords.latitude;
+                let long = data.coords.longitude;
+                const url = `https://api.openweathermap.org/data/2.5/forecast/daily?lat=${lat}&lon=${long}&mode=json&units=metric&cnt=5&appid=fbf712a5a83d7305c3cda4ca8fe7ef29`
+                ///api calling
+                fetch(url,{method: 'GET'})
+                //return promise
+                .then((res) => res.json())
+                //return data
+                .then((data) => {
+                    console.log(data)
+                    let city = data.city.name
+                    let temp = data.list[0].temp.day
+                    y.innerText = `${temp} °C ${city}`
+                })
+            }
+        });
     </script>
 
 </head>
@@ -172,7 +198,7 @@
                             </div>
 
                             <div class="row latest-job-list-item p-2">
-                                <div class="col-md-2">
+                                <div class="col-md-2">small text-muted text-center
                                     <img class="ogr-logo img-fluid mb-2" src="./assets/images/org-placeholer.png">
                                 </div>
                                 <div class="col-md-8 mb-2">
@@ -251,7 +277,17 @@
                 </div>
                 <!-- Sidebar -->
                 <div class="col-md-3">
+                    <!-- Today Weather -->
                     <div class="card mt-5 rounded-0">
+                        <!-- Sign up for Job Alearts Section -->
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold text-black mb-3">Today Weather Is</h5>
+                            <p id="out"></p>
+                            <p id="weather"></p>
+                        </div>
+                    </div>
+
+                    <div class="card mt-4 rounded-0">
                         <!-- Sign up for Job Alearts Section -->
                         <div class="card-body">
                           <h5 class="card-title fw-bold text-black mb-3">Sign up for Job Alerts</h5>
@@ -269,6 +305,7 @@
                           </form>
                         </div>
                       </div>
+
 
                     <!-- Free Resume Review-->
                     <div class="card mt-4 rounded-0">
